[package]
name = "netra-host"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.1"
serialport = "4.2.0"
chrono = "0.4.24"
toml = "0.7.6"
serde = { version = "1.0.183", features = ["derive"] }
daemonize = "0.5.0"
